--- a/Msb205/Msb205.Rmd
+++ b/Msb205/Msb205.Rmd
@@ -35,21 +35,34 @@ library(knitr)
 ```{r Oppgave 1}
 kc_house_data_bruk <- kc_house_data %>% 
   arrange(desc(date)) %>% #Sorter salgene «descending» etter dato, siste først (dvs. mai 2015, april 2015 osv.)¨
-  distin
-```
-  distinct(id, keep_all = FALSE)  #Bruk dplyr::distinct() til å velge siste salg der vi har multiple salg av samme eiendom.
+  distinct(id, .keep_all = TRUE)
+kc_house_data_bruk_sf <- st_as_sf(kc_house_data_bruk, coords = c("long", "lat"),  
+                 crs = 4326) #Bruk st_as_sf() til å konvertere house data til et sf objekt vha. long lat og sett til geografisk projeksjon, dvs EPSG:4326.
+kc_house_data_bruk_sf <- st_transform(kc_house_data_bruk_sf, 2926) #Konverter dette sf objektet så til projeksjonen EPSG:2926.
 
-```{r}
-kc_house_data_bruk_sf = st_as_sf(kc_house_data_bruk, coords = c(lat, long), 
-                 crs = 4326, relation_to_geometry = "field")
 ```
 
+```{r Oppgave 1 - videre, cbd}
+#Bruk koordinatene fra Seattles wikipedia-side (øvre høyre hjørne, klikk linken så får dere koordinatene i desimal form) og sett dette punktet som CBD for Seattle.
+cbd <- data.frame(long = -122.333056, lat = 47.609722) #datasett med koordinatene
+  cbd_sf <- st_as_sf(cbd, coords = c("long", "lat"), crs = 4326) #til sf
+cbd_sf <- st_transform(cbd_sf, 2926) #til ESPG 2926
+```
+
+```{r rydde datasett og få avstand CBD inn i originaldatasett}
+kc_house_data_bruk_sf <- kc_house_data_bruk_sf %>% select(-starts_with("geometry."), -starts_with("avstand_til_cbd.."), -starts_with("distance_cbd"))
+
+#Konverter dette punktet til EPSG:2926. Finn avstanden mellom dette punktet og samtlige hus i datasettet i luftlinje. Konverter avstandene til km og legg dem i variabelen dest_CBD i kartet med husdata.
+avstand_til_cbd <- st_distance(kc_house_data_bruk_sf, cbd_sf) #avstand til cbd i luftlinje
+avstand_til_cbd_km <- avstand_til_cbd * 0.0003048 #1 fot er lik 0.0003048 kilometer
+kc_house_data_bruk_sf$dest_CBD <- avstand_til_cbd_km #inn i datasett
+```
+
+```{r Oppgave 1 ferdig, må rydde}
+rm(cbd, cbd_sf, kc_house_data, kc_house_data_bruk, kc_house_data_ja) #fjerne unødvendige datasett
+kc_house_data_oppg1 <- kc_house_data_bruk_sf #endre ferdig datasett til "kc_house_data_oppg1"
+rm(kc_house_data_bruk_sf) #fjerne 
+```
 
 
-Last ned House Sales King County, USA fra Kaggle
-Sjekk definisjonen på de ulike variablene
 
-Bruk st_as_sf() til å konvertere house data til et sf objekt vha. long lat og sett til geografisk projeksjon, dvs EPSG:4326.
-Konverter dette sf objektet så til projeksjonen EPSG:2926.
-Bruk koordinatene fra Seattles wikipedia-side (øvre høyre hjørne, klikk linken så får dere koordinatene i desimal form) og sett dette punktet som CBD for Seattle.
-Konverter dette punktet til EPSG:2926. Finn avstanden mellom dette punktet og samtlige hus i datasettet i luftlinje. Konverter avstandene til km og legg dem i variabelen dest_CBD i kartet med husdata.
