--- a/Msb205/Msb205.qmd
+++ b/Msb205/Msb205.qmd
@@ -1,12 +1,19 @@
 ---
+title: "Innlevering MSB205"
+output:
+  html_document:
+    df_print: paged
+  pdf_document: default
+---
+
+
 title: Innlevering MSB205
-author: Innlevering 2 i Data Science 2021 - Maren Sognefest og Mona Lisa Jones
+author: Maren Sognefest og Mona Lisa Jones
 Affiliation: HVL
 email: 152148@stud.hvl.no & xxxxxx@stud.hvl.no
 bibliography: Mittbibliotek.bib
 bib-humanities: true
 nocite: 
-csl: apa-no-ampersand
 lang: no-NB
 fontsize: 12pt
 linestretch: 1.5
@@ -16,13 +23,17 @@ output:
   word_document: default
   html_document:
     df_print: paged
----
+
+csl: apa-no-ampersand
+
 ```{r}
-library(dplyr)
+#| label: setup
+#| message: false
 library(sf)
+library(units)
 library(Jmisc)
 library(tidyverse)
-library(ggplot2)
+library(lubridate)
 library(sp)
 library(spdep)
 library(spatialreg)
@@ -35,32 +46,85 @@ library(foreign)
 # Oppgave 1 
 ```{r Oppgave 1}
 kc_house_data <- read.csv("./Data/kc_house_data.csv")
-kc_house_data$date <- lubridate::ymd_hms(kc_house_data$date) #lager datoobjekt
-
-kc_house_data <- kc_house_data %>%
-  mutate(year = year(date),
-         month = month(date),
-         day = day(date)) %>% #nye variabler for date, month, year
-  arrange(desc(date)) %>% ##sortere datasett basert på dato
-  distinct(id, .keep_all = TRUE) #behold bare siste salg
-kc_house_data_sf <- st_as_sf(kc_house_data, coords = c("long", "lat"), crs = 4326) #Bruk st_as_sf() til å konvertere house data til et sf objekt vha. long lat og sett til geografisk projeksjon, dvs EPSG:4326.
-kc_house_data_sf <- st_transform(kc_house_data_sf, 2926) #endre til EPSG:2926
 ```
+
+```{r}
+# skrevet om til litt mer tidyvelsk
+kc_house_data <- kc_house_data  |> 
+  mutate(
+    date = ymd_hms(date),
+    #nye variabler for date, month, year
+    year = year(date),
+    month = month(date),
+    day = day(date)
+    )  |>
+  #sortere datasett basert på dato
+  arrange(desc(date))  |>  
+  #behold bare siste salg
+  distinct(id, .keep_all = TRUE) 
+```
+
+```{r}
+# Bruk st_as_sf() til å konvertere house data til et sf objekt 
+# vha. long lat og sett til geografisk projeksjon, dvs EPSG:4326.
+kc_house_data_sf <- st_as_sf(
+  kc_house_data, 
+  coords = c("long", "lat"), 
+  crs = 4326
+  ) 
+```
+
+```{r}
+# endre projeksjon til EPSG:2926
+kc_house_data_sf <- st_transform(kc_house_data_sf, 2926)
+```
+
 
 ```{r Oppgave 1 - videre, cbd}
-#Bruk koordinatene fra Seattles wikipedia-side (øvre høyre hjørne, klikk linken så får dere koordinatene i desimalform) og sett dette punktet som CBD for Seattle.
-cbd <- data.frame(long = -122.333056, lat = 47.609722) #datasett med koordinatene
-  cbd_sf <- st_as_sf(cbd, coords = c("long", "lat"), crs = 4326) #til sf
-cbd_sf <- st_transform(cbd_sf, 2926) #til ESPG 2926
+# Bruk koordinatene fra Seattles wikipedia-side (øvre høyre hjørne, 
+# klikk linken så får dere koordinatene i desimalform) og sett 
+# dette punktet som CBD for Seattle.
+# 
+# datasett med koordinatene. Ser ut til at st_sfc(st_point())
+# er nødvendig
+cbd <- st_sfc(st_point(c(-122.333056, 47.609722)), crs = 4326)
+
+# til ESPG 2926
+cbd_sf <- st_transform(cbd, 2926) 
 ```
 
-```{r rydde datasett og få avstand CBD inn i originaldatasett}
-kc_house_data_sf <- kc_house_data_sf %>% select(-starts_with("geometry."), -starts_with("avstand_til_cbd.."), -starts_with("distance_cbd"))
 
-#Konverter dette punktet til EPSG:2926. Finn avstanden mellom dette punktet og samtlige hus i datasettet i luftlinje. Konverter avstandene til km og legg dem i variabelen dest_CBD i kartet med husdata.
-avstand_til_cbd <- st_distance(kc_house_data_sf, cbd_sf) #avstand til cbd i luftlinje
-avstand_til_cbd_km <- avstand_til_cbd * 0.0003048 #1 fot er lik 0.0003048 kilometer
-kc_house_data_sf$dest_CBD <- avstand_til_cbd_km #inn i datasett
+```{r}
+# DETTE SKJØNNER JEG IKKE. 
+# KAN IKKE SE AT HAR NOEN HENSIKT. VURDER Å SLETTE
+# JEG HAR SATT EVAL TIL FALSE SLIK AT DEN IKKE KJØRER
+#| label: rydde datasett og få avstand CBD inn i originaldatasett
+#| eval: false
+kc_house_data_sf <- kc_house_data_sf  |> 
+  select(
+    -starts_with("geometry."), 
+    -starts_with("avstand_til_cbd.."), 
+    -starts_with("distance_cbd")
+    )
+```
+
+```{r}
+# Konverter dette punktet til EPSG:2926. Finn avstanden mellom dette punktet
+# og samtlige hus i datasettet i luftlinje. Konverter avstandene til km 
+# og legg dem i variabelen dest_CBD i kartet med husdata.
+# 
+# cbd_sf er definert ovenfor. Enklere å bare bruke dette i en mutate i en
+# pipe med 
+
+kc_house_data_sf <- kc_house_data_sf %>% 
+  mutate(
+    avstand_til_cbd = st_distance(rep(cbd_sf, nrow(.)), ., by_element = TRUE),
+    avstand_til_cbd = set_units(avstand_til_cbd, km)
+    )
+
+# avstand_til_cbd <- st_distance(kc_house_data_sf, cbd_sf) #avstand til cbd i luftlinje
+# avstand_til_cbd_km <- avstand_til_cbd * 0.0003048 #1 fot er lik 0.0003048 kilometer
+# kc_house_data_sf$dest_CBD <- avstand_til_cbd_km #inn i datasett
 ```
 
 ```{r Oppgave 1 ferdig, må rydde}
@@ -106,7 +170,7 @@ kc_wadoh_map <- WADOH_King_County %>%
 
 ```{r}
 #Transponer kartet til projeksjonen EPSG:2926
-kc_wadoh_map<- st_transform(kc_wadoh_map, 2926)
+kc_wadoh_map <- st_transform(kc_wadoh_map, 2926)
 WADOH_King_County <- st_transform(WADOH_King_County, 2926)
 ```
 
@@ -117,6 +181,9 @@ acs_b19101_familyincome <- read.csv("./Data/acs_b19101_familyincome.csv")
 ```
 
 ```{r endre inntektsvariabler}
+# Denne forstår jeg ikke
+# endret eval til false
+#| eval: false
 acs_b19101_familyincome <- acs_b19101_familyincome %>%
   select(-starts_with("M")) %>% #fjerner M-variabler
   mutate(across(starts_with("E"), ~case_when(
@@ -125,6 +192,28 @@ acs_b19101_familyincome <- acs_b19101_familyincome %>%
     . > 100000 ~ "high"
   )))
 ```
+
+KOM SÅ LANGT
+
+Inntektsvariabelen. Finner ikke census-dataene så kan ikke lese inn .dbf filen
+
+```{r}
+#| eval: false
+library(foreign)
+kc_mean_fam_inc <- read.dbf("Msb205/Data/acs_b19101_familyincome.dbf", as.is = TRUE) %>% 
+  select(GEOIDTRT, starts_with("E")) %>% 
+  transmute(
+    GEO_ID_TRT = GEOIDTRT,
+    inc_fam_tot = E19101137,
+    inc_fam_low = E19101138 + E19101139 + E19101140 + E19101141 + E19101142 + E19101143,
+    inc_fam_med = E19101144 + E19101145 + E19101146 + E19101147 + E19101148 + E19101149,
+    inc_fam_high =  E19101150 + E19101151 + E19101152 + E19101153,
+    inc_fam_low_per = inc_fam_low/inc_fam_tot,
+    inc_fam_med_per = inc_fam_med/inc_fam_tot,
+    inc_fam_high_per = inc_fam_high/inc_fam_tot
+    )
+```
+
 
 
 ```{r Legge inn datasett etnisitet Dette fikk jeg heller ikke lastet ned som dbf-fil}
@@ -205,6 +294,8 @@ Lagre .gpkg filen for husdataene . (Sett opsjonen append=FALSE. Ellers får dere
 
 
 TROR DETTE ER FEIL, men ha d i tilfelle.
+
+```{r}
 common_keys <- intersect(names(tracts10), names(WADOH_King_County))
 print(common_keys) #finne felles kolonnenavn
 any(duplicated(WADOH_King_County$geometry))
@@ -213,3 +304,6 @@ any(duplicated(tracts10$geometry)) #sjekket alle duplikater slik... sikkert ikke
 tracts10 <- tracts10 %>%
   st_join(WADOH_King_County, by = c("GEO_ID_TRT", "FEATURE_ID", "TRACT_STR", "TRACT_INT", "TRACT_FLT", "TRACT_DEL", "TRTLABEL_F", "TRTLABEL_C", "TRTLABEL_T", "LEVEL_3", "TRACT_AREA", "TRACT_PERI", "LOGRECNO", "geometry"))
 ```
+
+
+
